research - unit test with karma, jasmine

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
   <meta name="description" content="">
   <meta name="author" content="">
   <title>Demo Angularjs2-Typescript</title>
-  <!-- Bootstrap Core CSS -->
-  <link href="css/bootstrap.min.css" rel="stylesheet">
-
-  <!-- Custom CSS -->
-  <link href="css/clean-blog.min.css" rel="stylesheet">
-
+   
+  <!-- inject:css -->
+  <link rel="stylesheet" href="/css/bootstrap.min.css">
+  <link rel="stylesheet" href="/css/clean-blog.min.css">
+  <!-- endinject -->
+  
   <!-- Fonts -->
   <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href='http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
@@ -30,7 +30,10 @@
   <script src="node_modules/rxjs/bundles/Rx.js"></script>
   <script src="node_modules/angular2/bundles/angular2.dev.js"></script>
   <script src="node_modules/angular2/bundles/router.dev.js"></script>
-  <script src="js/clean-blog.min.js"></script>
+ <!-- inject:js -->  
+ <script src="/js/clean-blog.min.js"></script>  
+ <!-- endinject -->
+  
 
   <script>
     System.config({
