- cookie - asp.net 5 web api - get data from web api

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <!-- inject:css -->
   <link rel="stylesheet" href="/css/bootstrap.min.css">
   <link rel="stylesheet" href="/css/clean-blog.min.css">
+  <link rel="stylesheet" href="/css/app.css">
   <!-- endinject -->
   
   <!-- Fonts -->
@@ -31,6 +32,8 @@
   <script src="node_modules/angular2/bundles/angular2.dev.js"></script>
   <script src="node_modules/angular2/bundles/router.dev.js"></script>
   <script src="node_modules/angular2/bundles/http.dev.js"></script>
+  
+  <script src="node_modules/angular2-cookie/bundles/angular2-cookie.min.js"></script>
  <!-- inject:js -->  
  <script src="/js/clean-blog.min.js"></script>  
  <!-- endinject -->
