--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
   <script src="node_modules/angular2/bundles/http.dev.js"></script>
   
   <script src="node_modules/angular2-cookie/bundles/angular2-cookie.min.js"></script>
+  <script src="node_modules/tinymce/tinymce.min.js"></script>
  <!-- inject:js -->  
  <script src="/js/clean-blog.min.js"></script>  
  <!-- endinject -->
